Fixed bug: Menu icon not showing

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ body {
     height:32px;
     width:32px;
     margin-left:32px;
-    background-image:url("/resources/images/ic_menu_white_24dp/web/ic_menu_white_24dp_2x.png");
+    background-image:url("resources/images/ic_menu_white_24dp/web/ic_menu_white_24dp_2x.png");
     background-size:cover;
     background-repeat:no-repeat;
     transition: .2s all cubic-bezier(.9, .25, .4, 1);
